Revision history for Test-NoTabs

0.1  2006-08-24
     - Module created and released on an unsuspecting world.

0.2  2006-08-25
     - Minor code changes and pod updates
     - Added Makefile.PL for compatibility

0.3  2006-08-26
     - Added missing dependancy (Test::Group)

0.4  2008-12-14
     - Change to Module::Install so that we install 
       cleanly on a fresh perl 5.8

0.5  2009-01-04
     - Start building dist with ShipIt
     - Change to remove warnings in newer versions of
       Test::Builder (Florian Ragwitz)
       
0.6  2009-01-06
     - Remove Test::Group as a dependency as Test::Group
       currently fails its tests.

0.7  2009-01-06
     - Stop tests dumping files in temporary directory

0.8  2009-02-04
     - Fix tests to not open the same file 2 times at once,
       as this doesn't work on Win32 and causes CPANTS fails.

0.9  2009-087-03
     - Fix default text to make sense, test passing means there are no tabs..

1.0
     - Fix warnings with old perl versions (5.8.3) RT#54477
